<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.fp024.mvcpractice</groupId>
  <artifactId>spring-mvc-practice-study</artifactId>
  <name>${project.artifactId}</name>
  <packaging>war</packaging>
  <version>1.0.0-SNAPSHOT</version>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>

    <spring.version>6.2.19</spring.version>
    <aspectj.version>1.9.25.1</aspectj.version>
    <logback.version>1.6.3</logback.version>

    <jakarta-inject.version>2.0.1</jakarta-inject.version>
    <jakarta-servlet.version>6.1.0</jakarta-servlet.version>

    <!-- Lombok -->
    <lombok.version>1.18.46</lombok.version>

    <!-- Database -->
    <hikaricp.version>7.1.0</hikaricp.version>
    <ojdbc17.version>23.26.3.0.0</ojdbc17.version>

    <!-- ORM -->
    <mybatis.version>3.5.19</mybatis.version>
    <!-- 
       💡mybatis-spring은 spring 버전에 따라 요구되는 버전이 다르다.
          https://mybatis.org/spring/ko/index.html
          https://central.sonatype.com/artifact/org.mybatis/mybatis-spring/versions
    -->
    <mybatis-spring.version>3.0.6</mybatis-spring.version>

    <!-- Thymeleaf -->
    <thymeleaf.version>3.1.5.RELEASE</thymeleaf.version>
    <thymeleaf-layout-dialect.version>4.0.1</thymeleaf-layout-dialect.version>

    <!-- WebJars -->
    <webjars-locator-core.version>0.59</webjars-locator-core.version>
    <webjars-jquery.version>4.0.0</webjars-jquery.version>
    <webjars-bootstrap.version>5.3.8</webjars-bootstrap.version>

    <!-- Testing -->
    <junit.version>6.1.3</junit.version>
    <hamcrest.version>3.0</hamcrest.version>
    <assertj.version>3.27.7</assertj.version>
    <mockito.version>5.23.0</mockito.version>

    <!-- Maven Plugin Version -->
    <maven-toolchains-plugin.version>3.3.0</maven-toolchains-plugin.version>
    <maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>
    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
    <maven-war-plugin.version>3.5.1</maven-war-plugin.version>
    <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>

    <!-- Cargo Maven3 Plugin -->
    <cargo-maven3-plugin.version>1.10.28</cargo-maven3-plugin.version>
    <cargoContextPath>${project.artifactId}</cargoContextPath>

    <!-- 명시적 의존성 관리 -->
    <slf4j.version>2.0.18</slf4j.version>
    <byte-buddy.version>1.18.3</byte-buddy.version>

  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- 
        mockito-junit-jupiter가 아직 5.13.4 버전을 사용중인데,
        일단 최신으로 올려두자!
      -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <!-- 
        mockito, assertj에서 byte-buddy를 사용하는데, assertj가 최신임.. 😅 
        이부분은 좀 해깔린다... mockito 버전에 맞춰서 내릴지 말지? 😅😅
        Gemini 의견으로는... byte-buddy가 하위호환성을 잘 지키는 라이브러리라고 한다.
        버전을 올려두는게 이득이라고 한다.👍
      -->
      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy</artifactId>
        <version>${byte-buddy.version}</version>
      </dependency>
      <!-- 
        thymeleaf-layout-dialect가 아직 최신 버전을 사용하지 않고 있음 
        최신으로 올림
       -->
      <dependency>
        <groupId>org.thymeleaf</groupId>
        <artifactId>thymeleaf</artifactId>
        <version>${thymeleaf.version}</version>
      </dependency>
      <!-- 
        slf4j 관련해서는 logback-classic이 사용하는 버전으로 기준을 맞춤
      -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Spring -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-jdbc</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-tx</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- AspectJ -->
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjrt</artifactId>
      <version>${aspectj.version}</version>
    </dependency>

    <!-- Logging -->
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <!-- @Inject -->
    <dependency>
      <groupId>jakarta.inject</groupId>
      <artifactId>jakarta.inject-api</artifactId>
      <version>${jakarta-inject.version}</version>
    </dependency>

    <!-- Servlet -->
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>${jakarta-servlet.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- Database -->
    <dependency>
      <groupId>com.oracle.database.jdbc</groupId>
      <artifactId>ojdbc17</artifactId>
      <version>${ojdbc17.version}</version>
    </dependency>

    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>${hikaricp.version}</version>
    </dependency>

    <!-- ORM -->
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>${mybatis.version}</version>
    </dependency>

    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis-spring</artifactId>
      <version>${mybatis-spring.version}</version>
    </dependency>


    <!-- Thymeleaf -->
    <dependency>
      <groupId>org.thymeleaf</groupId>
      <artifactId>thymeleaf-spring6</artifactId>
      <version>${thymeleaf.version}</version>
    </dependency>
    <dependency>
      <groupId>nz.net.ultraq.thymeleaf</groupId>
      <artifactId>thymeleaf-layout-dialect</artifactId>
      <version>${thymeleaf-layout-dialect.version}</version>
    </dependency>

    <!-- WebJars -->
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>webjars-locator-core</artifactId>
      <version>${webjars-locator-core.version}</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>jquery</artifactId>
      <version>${webjars-jquery.version}</version>
    </dependency>
    <dependency>
      <groupId>org.webjars</groupId>
      <artifactId>bootstrap</artifactId>
      <version>${webjars-bootstrap.version}</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>${hamcrest.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>


  <build>
    <!-- The war file name is created as artifactId.war -->
    <finalName>${project.artifactId}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-toolchains-plugin</artifactId>
          <version>${maven-toolchains-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven-clean-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>${maven-war-plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-toolchains-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>toolchain</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <toolchains>
            <jdk>
              <version>${maven.compiler.target}</version>
            </jdk>
          </toolchains>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>${java.version}</release>
          <compilerArgs>
            <arg>-Xlint:all</arg>
            <arg>-Xlint:-processing</arg>
            <arg>-proc:full</arg>
            <arg>-Xlint:-path</arg> <!-- bad path element 경고 무시 -->
            <arg>-Xlint:-classfile</arg> <!-- 참조하는 클래스 파일 없음 경고 무시 -->
          </compilerArgs>
          <parameters>true</parameters> <!--https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention -->
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <executions>
          <execution>
            <id>clean-javaagent-libs</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
            <configuration>
              <excludeDefaultDirectories>true</excludeDefaultDirectories>
              <filesets>
                <fileset>
                  <directory>${project.basedir}/javaagent-libs</directory>
                  <includes>
                    <include>**/*</include>
                  </includes>
                </fileset>
              </filesets>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-mockito-agent</id>
            <phase>generate-test-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.mockito</groupId>
                  <artifactId>mockito-core</artifactId>
                  <version>${mockito.version}</version>
                  <outputDirectory>${project.basedir}/javaagent-libs</outputDirectory>
                </artifactItem>
              </artifactItems>
              <overWriteReleases>true</overWriteReleases>
              <overWriteSnapshots>true</overWriteSnapshots>
            </configuration>
          </execution>
          <execution>
            <goals>
              <goal>properties</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-javaagent:${org.mockito:mockito-core:jar} -Xshare:off</argLine>
          <!-- <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine> -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.cargo</groupId>
        <artifactId>cargo-maven3-plugin</artifactId>
        <version>${cargo-maven3-plugin.version}</version>
        <configuration>
          <deployables>
            <deployable>
              <properties>
                <context>${cargoContextPath}</context>
              </properties>
            </deployable>
          </deployables>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>